--- a/README.adoc
+++ b/README.adoc
@@ -1,13 +1,25 @@
 = virtual-invention-dice
-Inspired from Atomic Shrimp's invention cube. Also serves as a simpler exercise for integrating PWA. For more information about the inspiration, you can read more about it in http://atomicshrimp.com/post/2014/01/20/Invention-Dice[this link]. There's also a video from the creator of this idea which you can see it https://www.youtube.com/watch?v=NBdVpiWUKhU[right here].
+Inspired from Atomic Shrimp's invention cube. Also serves as a simpler 
+exercise for integrating PWA. 
+
+For more information about the inspiration, you can read more about it 
+in http://atomicshrimp.com/post/2014/01/20/Invention-Dice[this link]. 
+There's also a video from the creator of this idea which you can 
+see it https://www.youtube.com/watch?v=NBdVpiWUKhU[right here].
 
 == Demo
 image::./docs/assets/demo.gif[Demo of the app]
 
 == Features of the app
 * Defining your own set of virtual idea dice set (or VIDS, as I call them)
+
 * Storing VIDS in IndexedDB (with https://localforage.github.io/localForage/[localforage])
+
 * Import and export of VIDS with a JSON file
+-- You can see some sample dice sets in the link:examples/[`examples/` directory] and import 
+them to see it. Be sure to export your dice set first since the app can only have one set 
+(at least for now).
+
 * Saving dice results in IndexedDB (with https://localforage.github.io/localForage/[localforage])
 
 == Development build
@@ -21,10 +33,17 @@ Voila! It's open now! 😁
 
 If you want to contribute or just add features that you want, take note of the following configurations:
 
-* created with https://cli.vuejs.org/guide/[Vue CLI] and the https://router.vuejs.org/[official Vue router library]
+* created with https://cli.vuejs.org/guide/[Vue CLI] 
+and the https://router.vuejs.org/[official Vue router library]
+
 * uses http://tailwindcss.com/[Tailwind CSS] for most of the CSS
-* uses https://github.com/eslint/eslint[ESLint] and it has the https://github.com/standard/standard[standard style guide] as the configuration
-* all of the usual configurations and constants like the routes, app information, and the author are located in file:./src/appConstants.js[`./src/constants.js`], I've made it so that I can update it easily in one place
+
+* uses https://github.com/eslint/eslint[ESLint] and it has the 
+https://github.com/standard/standard[standard style guide] as the configuration
+
+* all of the usual configurations and constants like the routes, app information, 
+and the author are located in link:src/constants.js[`./src/constants.js`], I've made it 
+so that I can update it easily in one place
 
 Also, for future references:
 
